Fix Navbar dark mode and watch now button zindex issue

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -163,8 +163,16 @@ ul {
     left: 0;
     z-index: 99;
     background: #fff;
-
-}
+  }
+  
+  .fixed_header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 99;
+      background: #fff;
+  }
 
 .logo h2 a {
     text-decoration: none;
@@ -218,12 +226,29 @@ ul {
         flex-direction: column;
         width: 100%;
         color: #000000;
-        background-color: #ffff;
         transition: all 0.3s ease-in-out;
-        overflow-y: auto; 
+        overflow-y: auto;
         gap: 1rem;
         z-index: 99;
+        background: rgba(238, 227, 227, 0.966);
+        background-color: #f4f4f9f8;
+        backdrop-filter: blur(60px);
+        box-shadow: 0 0 80px rgba(0, 0, 0, 0.3);
+        border: 2px solid rgba(28, 26, 26, 0.327);
+        border-top: 0px;
     }
+    
+    .dark_nav__links {
+        background-color: #1e1e1e;
+        color: #fff;
+        background: rgba(39, 39, 39, 0.966);
+        backdrop-filter: blur(60px);
+        box-shadow: 0 0 80px rgba(0, 0, 0, 0.3);
+        border: 2px solid rgba(255, 255, 255, 0.532);
+        border-top: 0px;
+        position: absolute;
+        top: 6.2rem;
+      }
 
     .menu {
         flex-direction: column;
@@ -231,15 +256,20 @@ ul {
 
     #nav-check:not(:checked)~.nav__links {
         height: 0px;
+        border: 0px solid black;
+        width: 94vw;
     }
 
     #nav-check:checked~.nav__links {
         transition: all 0.75s ease-in-out;
+        padding-bottom: 2rem;
         height: 85vh;
         overflow-y: auto;
         border-bottom-left-radius: 30px;
         border-bottom-right-radius: 30px;
         box-shadow: 0px 0px 1px 0px #000000a1;
+        width: 94vw;
+        z-index: 500;
     }
 
     .nav_item {
